upgrade material-design-lite module to 1.1.3

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "bugs": "https://github.com/markbirbeck/mdl-sass-mixins/issues",
   "homepage": "https://github.com/markbirbeck/mdl-sass-mixins",
   "dependencies": {
-    "material-design-lite": "^1.0.4-2"
+    "material-design-lite": "^1.1.3"
   }
 }
